hard-gists/6044677/run.log
=== Docker Run Log for 6044677 ===
Started at: Mi 29. Okt 16:18:39 CET 2025

[2025-10-29 16:18:40] START: Running container for 6044677
[2025-10-29 16:18:40] SUCCESS: Container 8a6ad008a2af8be11a853007d46e8f64957386a97c85827e840dd5d039c9234a started for 6044677
=== Container logs for 6044677 ===
  File "/snippet.py", line 3
    print "language: python"
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6044677 ===
[2025-10-29 16:18:42] INFO: Container 8a6ad008a2af8be11a853007d46e8f64957386a97c85827e840dd5d039c9234a has stopped
